--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3 sans-serif;
+  font: bold 100%/1.3 serif;
 }
 
 *, *::before, *::after {
@@ -37,4 +37,13 @@ figcaption {
   position: absolute;
   left: .5em;
   bottom: .5rem;
+  font-family: "Roboto Slab", serif;
+  color: #fff;
+  background-color: rgba(0, 0, 0, .5);
+  border-radius: 8px;
+  padding: 1rem;
+}
+
+figure {
+  margin: 0;
 }
